ribbit/tests/ui/variant_nonzero.stderr
error: Non-zero enum requires either all non-zero discriminants *or* variant with discriminant 0 to be non-zero
 --> tests/ui/variant_nonzero.rs:6:5
  |
6 |     #[ribbit(size = 8)]
  |     ^
